# ant-SVD

./: .gitignore  README.md  devshell.sh  flake.nix  main.py  pyproject.toml
input/: ants-concrete.webm.README.txt  flight.webm.README.txt  milkweed-beetle.webm  milkweed-beetle.webm.README.txt  train.webm.README.txt
scripts/: gen_mem_usage_report.sh
src/: main.py
src/ant_svd/: __init__.py
src/ant_svd/svd/: __init__.py  jacobi.py
src/ant_svd/utils/: logging.py
src/ant_svd/video/: __init__.py
src/svd/: jacob.py  manual_svd.py
