[project]
name = "ant-svd"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "scikit-image>=0.26.0",
    "scikit-video>=1.1.15",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project.scripts]
ant-svd = "ant_svd:main"

[tool.uv.build-backend]
module-name = "ant_svd"

[tool.uv.sources]
scikit-video = { git = "https://github.com/scikit-video/scikit-video.git" }
